Set overflow hidden on html & body to prevent HScroll
Change CSS for sidebar body to use 'overflow: hidden' instead of 'overflow-x: hidden' to prevent both horizontal and vertical scrolling.

--- a/Sage-Like/sidebar/panel.css
+++ b/Sage-Like/sidebar/panel.css
@@ -44,7 +44,7 @@ html, body {
 	line-height: var(--line-height);
 	background-color: var(--bk-color-window);
 	color: var(--color-text);
-	overflow-x: hidden;
+	overflow: hidden;
 	margin: 0;
 	box-sizing: border-box;
 }
